kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: my-deployment
    labels:
        app: my-app
        env: development
        tier: frontend
spec:
    replicas: 3
    selector:
        matchLabels:
            app: my-app
            env: development
            tier: frontend
    template:
        metadata:
            labels:
                app: my-app
                env: development
                tier: frontend
        spec:
            containers:
                - name: my-app
                  image: <your image>
                  ports:
                      - containerPort: 80
            imagePullSecrets:
                - name: regcred
