kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: my-service
    labels:
        app: my-app
        env: development
        tier: frontend
spec:
    selector:
        app: my-app
        env: development
        tier: frontend
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
    type: LoadBalancer
