kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: my-ing
spec:
    ingressClassName: nginx
    rules:
        - host: test-<your name>.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: my-service
                            port:
                                number: 80
